2010-03-19 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* TreeView.cs: use enums instead of strings for attributes.

2010-03-06  Marek Habersack  <mhabersack@novell.com>

	* XmlDataSource.cs: reload document when one of Data, DataFile,
	Transform or TransformFile properties is set. Fixes bug
	#585968. Fix based on patch from Jeffrey Alvarez
	<kuritsu@gmail.com>, thanks.

2010-02-19  Marek Habersack  <mhabersack@novell.com>

	* SqlDataSource.cs: call base.OnInit in OnInit. Fixes bug #572781

2010-02-18  Marek Habersack  <mhabersack@novell.com>

	* ListItemCollection.cs: ItemsEnabled and associated code removed
	- there's no need to alter ListItem's Enabled property when
	loading view state.

	* ListControl.cs: SaveViewState doesn't set the items collection's
	ItemsEnabled property as it was removed from ListItemCollection

	* CheckBoxList.cs: LoadPostData never unselects any item. A better
	fix for bug #377703
	RenderItem renders items as disabled when Enabled is false, but if
	Enabled is true, item is rendered according to the value of its
	own Enabled property. Fixes bug #578770

	* TreeView.cs: RegisterStyle must copy CssClass in addition to
	other style properties. Fixes bug #580692

2010-01-18  Marek Habersack  <mhabersack@novell.com>

	* Parameter.cs: added missing 3.5 APIs - constructors taking
	DbType as one of the parameters, ConvertDbTypeToTypeCode,
	ConvertTypeCodeToDbType and GetDatabaseType. Fixes bug #567850

2010-01-15  Marek Habersack  <mhabersack@novell.com>

	* ChangePassword.cs: BaseChangePasswordContainer forwards
	EnsureChildControls call to its owner, so that finding controls in
	the container works correctly.

2009-11-30  Marek Habersack  <mhabersack@novell.com>

	* WebControl.cs: HasAttributes made available as internal for 1.1
	Avoid calling the Attributes getter many times in
	CopyBaseAttributes.
	If TrackViewState is called and attributes state bag already
	exists, mark all items in the latter as dirty.
